# agentic-search

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  USAGE.md
src/: main.rs  search.rs  types.rs
