[package]
name = "cardea-agentic-search"
edition    = "2024"
version    = "0.10.0"
repository = "https://github.com/cardea-mcp/cardea-agentic-search"
license    = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
endpoints = { version = "0.35.0" }
futures = { version = "0.3" }
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
mysql = { version = "26.0.0", default-features = false, features = ["rustls-tls-ring"] }
mysql_common = { version = "0.35.5" }
pin-project-lite = { version = "0.2" }
rand = { version = "0.9" }
regex = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.6.3", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
    "transport-sse-server",
] }
rustls = { version = "0.23.27", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
tokio-tungstenite = { version = "0.27.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
